--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,24 @@ services:
       timeout: 5s
       retries: 5
 
+  minio:
+    image: quay.io/minio/minio
+    command: server /data --console-address ":9001"
+    container_name: minio
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    healthcheck:
+      test: [ "CMD", "mc", "ready", "local" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+    volumes:
+      - ./minio/img:/data
 #  elasticsearch:
 #    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
 #    container_name: es-container
